force-app/main/default/objects/SQX_Part__c/SQX_Part__c.object-meta.xml
<CustomObject>
    <description>Object is used to store information about the Part records imported from the external database</description>
    <label>CQ Part</label>
    <nameField>
        <label>CQ Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>