force-app/main/default/objects/SQX_Part__c/fields/SQX_Active__c.field-meta.xml
<CustomField>
    <fullName>SQX_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>