force-app/main/default/objects/SQX_Part__c/fields/SQX_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>SQX_Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CQ Parts</relationshipLabel>
    <relationshipName>CQ_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>