force-app/main/default/objects/SQX_Part__c/fields/SQX_Total_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>SQX_Total_Quantity_Shipped__c</fullName>
    <label>Total Quantity Shipped</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>